<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">moonrise</string>
    <string name="chinese_simple">中文简体</string>
    <string name="english">English</string>
    <string name="Vietnamese">tiếng Việt</string>
    <string name="Chinese_traditional ">中文繁體</string>
    <string name="japan">日本語</string>
    <string name="korea">한국의</string>
    <string name="index">Desktop</string>
    <string name="apps">Apps</string>
    <string name="app_manager">App Manager</string>
    <string name="setting">Setting</string>
    <string name="my_MoonRise">MoonRise</string>
    <string name="has_to_first">Has been to the home page!</string>
    <string name="has_to_last">Has been to the end!</string>
    <string name="unstall">Uninstall</string>
    <string name="to_desktp">To desktop</string>
    <string name="cancel_to_desktp">Cancel desktop</string>
    <string name="desktop_noapp_prompt">Please choose app show here from app manager</string>
    <string name="mac">MAC:</string>
    <string name="hardware_name">Hardware:</string>
    <string name="version">Version:</string>
    <string name="message">User message:</string>
    <string name="welcome_banner">Relaxed • Inspire • healthy • Joy</string>
    <string name="soft_version">Version:</string>
    <string name="broswer">Internet</string>
    <string name="file">File</string>
    <string name="video">Video</string>
    <string name="settings">Setting</string>
    <string name="gallery">Gallery</string>
    <string name="music">Music</string>
    <string name="download">Download</string>
    <string name="appstore">Google App Store</string>
    <string name="app_not_found">The application is not found!</string>
    <string name="title_alert">Alert message</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="jiong">Desktop is full!</string>
    <string name="prompt">Prompt</string>
    <string name="update">Update</string>
    <string name="index_ad">感謝您選用MoonRise產品。 釋放 感動 健康 快樂</string>
    <string name="startdownload">start download update apk </string>
    <string name="dlna">DLNA</string>
    <string name="upgrade">Upgrade</string>
    <string name="box_setting">Box setting</string>
    <string name="google_play">Google play</string>
    <string name="france">français</string>
    <string name="pree_any_key_to_return">Press any key to return</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_content">\u3000\u3000MoonRise is a high-definition multimedia player network device based on Android OS(hereinafter referred to as "The device"),which is released by All Day Group (Thailand) Co. LTD. (hereinafter referred to as "The Company").\n
			\u3000\u3000In order to get using experience by the device, you may install third-party application(s) from your own resources such as internet.the company is not responsible for any third-party applications related to the correctness, accuracy, and legitimacy of the contents. The users must abide by any applicable laws, regulations, rules or codes accepted in their respective local jurisdictions. Do not install and use any illegal contents such as pornography, violence, and application containing copyright content.\n 
			\u3000\u3000Thank you for purchasing MoonRise.Please send email(Fmttv168@gmail.com) if you have any suggestions,it would be very helpful to improve the device.</string>
    
    <string name="agree_disclaimer">Accept</string>
    <string name="read_disclaimer">Accept</string>
	<string name="save_mac_fail">Save mac fial!</string>
	<string name="save_mac_success">Save mac success!</string>
	<string name="player_null">Please install the player, otherwise unable to play</string>
	<string name="network_not_connect">Network not connect</string>
	<string name="ready_play">Ready play</string>
	<string name="appstore2">App Store</string>
	
	
	<string name="n_live">Live</string>
	<string name="n_live_back">Live Video</string>
	<string name="n_film">Film</string>
	<string name="n_drama">Drama</string>
	<string name="n_learn">Teaching Program</string>
	<string name="n_adult">18+</string>
	<string name="n_ktv">KTV &amp; MV</string>
	<string name="n_back">Back</string>
	<string name="n_other">App</string>
	<string name="h_home">Desktop</string>
	<string name="h_myapp">Apps</string>
	<string name="h_app_mana">App Manager</string>
	<string name="h_app_grden">App garden</string>
	<string name="h_app_internet">Internet</string>
	<string name="h_app_file">File broswer</string>
	<string name="h_app_setting">Setting</string>
	<string name="h_app_MoonRise">MoonRise</string>
	<string name="app_and_set">App &amp; Setting</string>
	<string name="machine_code">Mac</string>
	<string name="validity">Validity</string>
	<string name="clear_produce">Clean</string>
	<string name="network_test">Network test</string>
	<string name="menu_1">I LIVE</string>
	<string name="menu_2">A ray of HD</string>
	<string name="menu_3">Cloud VOD</string>
	<string name="menu_4">Sports LIVE</string>
	<string name="menu_5">I LIVE HK</string>
	<string name="menu_6">HK World</string>
	<string name="menu_7">HKTV</string>
	<string name="menu_8">VN_58LIVE</string>
	<string name="menu_9">NAMVOD</string>
	<string name="menu_10">I PlayBack</string>
	
	<string name="live_taiwan">Live Taiwan</string>
	<string name="live_tiyu">Live Sports</string>
	<string name="live_dalu">Live China</string>
	<string name="live_hk">Live HK</string>
	<string name="live_universal">Live International</string>
	<string name="live_yuenan">Live Vietnam</string>
	<string name="live_lookback">Looking Back</string>
	<string name="live_other">More apps</string>
	<string name="help">Help</string>
</resources>